Change logo place

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Kai Wang's Homepage
 description: To be a cool hacker!
+logo: https://avatars0.githubusercontent.com/u/8757419
