--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Kai Wang's Homepage
+title: Kai Wang
 description: To be a cool hacker!
 logo: https://avatars0.githubusercontent.com/u/8757419
